2013-05-13  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-indent-comment): Fix the indentation
	of ### or %%%.

2013-05-12  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-startup): Store the value
	of __octave_srcdir__ for octave-source-directories.
	(inferior-octave-check-process): New function refactored out of
	inferior-octave-send-list-and-digest.
	(octave-source-directories)
	(octave-find-definition-filename-function): New variables.
	(octave-source-directories)
	(octave-find-definition-default-filename): New functions.
	(octave-find-definition): Improve to find functions implemented in C++.

2013-05-12  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-outlook-format-1):
	Don't include dayname in the output.  (Bug#14349)

2013-05-11  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/autoload.el (generated-autoload-load-name): Doc fix.

	* cus-dep.el (custom-make-dependencies): Only use safe local variables.
	Treat cc-provide like provide.

2013-05-11  Kevin Ryde  <user42@zip.com.au>

	* cus-dep.el (custom-make-dependencies):
	Use generated-autoload-load-name for the sake of files such
	such cedet/semantic/bovine/c.el, where the base file name
	is not in load-path.  (Bug#5277)

2013-05-11  Glenn Morris  <rgm@gnu.org>

	* dos-vars.el, emacs-lisp/cl-indent.el, emulation/tpu-extras.el:
	Provide features.

2013-05-11  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-indent-comment): Improve.
	(octave-eldoc-message-style, octave-eldoc-cache): New variables.
	(octave-eldoc-function-signatures, octave-eldoc-function): New
	functions.
	(octave-mode, inferior-octave-mode): Add eldoc support.

2013-05-11  Richard Stallman  <rms@gnu.org>

	* epa.el (epa-decrypt-file): Take output file name as argument
	and read it using `interactive'.

2013-05-11  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-beginning-of-line)
	(octave-end-of-line): Check before using up-list because it jumps