@@ -2,6 +2,8 @@
 
 	* progmodes/octave.el (octave-indent-comment): Fix the indentation
 	of ### or %%%.
+	(octave-mode-map): Bind octave-indent-defun to C-c C-q instead of
+	C-M-q.
 
 2013-05-12  Leo Liu  <sdl.web@gmail.com>
 
